# ComplaintSystemMainCourseApp

./: .gitignore  alembic.ini  db.py  main.py  pyproject.toml
commands/: user.py
managers/: auth.py  complaint.py  user.py
migrations/: env.py
migrations/versions/: 18448aa515e3_mising_phone_coloumn_added.py  3ee37f721ea6_create_users_table.py  79196d39ff62_fieldupdate.py  bd386d4f5d39_initial_datasetup.py
models/: __init__.py  complaint.py  transaction.py  user.py
resources/: auth.py  complaint.py  user.py
schemas/: base.py
schemas/reponse/: complaint.py
schemas/request/: user.py
services/: s3.py  wise.py
util/: helpers.py
